--- a/index.html
+++ b/index.html
@@ -12,5 +12,11 @@
             <!-- HEADER START -->
 
     </heade>
+
+    <section>
+
+        <!-- SECTION START -->
+
+    </section>
 </body>
 </html>
